Add all lights toggle buttons

--- a/Lab 3/smart-room-assistant/views/reactMount.ejs
+++ b/Lab 3/smart-room-assistant/views/reactMount.ejs
@@ -6,11 +6,9 @@
     <link rel="stylesheet" href="/style.css" />
 </head>
 <body>
-    <h1>Title</h1>
-
     <div id="react-target"></div>
     <!-- Element where React will mount -->
 
-    <script type="module" src="/assets/main-BXjdQSWW.js"></script>
+    <script type="module" src="/assets/main-C89WhHLi.js"></script>
 </body>
 </html>
