Add room temperature graph

--- a/Lab 3/smart-room-assistant/views/reactMount.ejs
+++ b/Lab 3/smart-room-assistant/views/reactMount.ejs
@@ -9,6 +9,6 @@
     <div id="react-target"></div>
     <!-- Element where React will mount -->
 
-    <script type="module" src="/assets/main-C89WhHLi.js"></script>
+    <script type="module" src="/assets/main-BY2-mx0O.js"></script>
 </body>
 </html>
