Add rooms average temperature and last recorded room temperature to dashboard.

--- a/Lab 3/smart-room-assistant/views/reactMount.ejs
+++ b/Lab 3/smart-room-assistant/views/reactMount.ejs
@@ -3,12 +3,11 @@
 <html>
 <head>
     <title>React page</title>
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="/assets/main-B2-ohxCh.css">
 </head>
 <body>
-    <div id="react-target"></div>
-    <!-- Element where React will mount -->
+    <div id="react-target" class="flex-grow-1"></div>
 
-    <script type="module" src="/assets/main-BY2-mx0O.js"></script>
+    <script type="module" src="/assets/main-BK-FpgvM.js"></script>
 </body>
 </html>
