--- a/Lab 3/smart-room-assistant/views/reactMount.ejs
+++ b/Lab 3/smart-room-assistant/views/reactMount.ejs
@@ -8,6 +8,6 @@
 <body>
     <div id="react-target" class="flex-grow-1"></div>
 
-    <script type="module" src="/assets/main-BK-FpgvM.js"></script>
+    <script type="module" src="/assets/main-D_zn99vx.js"></script>
 </body>
 </html>
